Integrating MovieDetails page

--- a/CapstoneProject/Views/Home/Index.cshtml
+++ b/CapstoneProject/Views/Home/Index.cshtml
@@ -124,7 +124,7 @@
                                     </div>
                                     <div class="col-md-9">
                                         <div class="card-body">
-                                            <a asp-controller="MovieDetails" asp-action="SingleMovie" asp-route-MovieID="@movie.MovieID">
+                                            <a asp-controller="MovieDetails" asp-action="Index" asp-route-MovieID="@movie.MovieID">
                                                 <h4 class="card-title">@movie.Title</h4>
                                             </a>
                                             <p class="card-text">@movie.Description</p>
